--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -8,66 +8,115 @@
 :root{
     --primaryColor : #759AFF;
     --backGroundColor : #08122A;
-    --backGroundColor2 : #08122A;
+    --backGroundColor2 : #0D1935;
+    --whiteColor:#ffffff;
 }
 
 
-.navBar{
+.navBarTop,.navBarScroll{
     position: fixed;
     z-index: 1;
-   /* background-color: black;*/
     width: 100%;
     display: flex;
     flex-direction: row;
-    padding: 10px 32px;
+    padding: 1.7rem 48px;
+    background-color: transparent;
+}
+.navBarScroll{
+    backdrop-filter: blur(20px);
+    --webkit-backdrop-filter : blur(20px);
+    background-color: rgb(13, 25, 53,0.5);
+    box-shadow: 0px 0px 50px rgb(13, 25, 53);
 }
 img{
    /* background-color: aqua;*/
-   width:70px;
-   height: 50px;
+    width: 8rem;
+    height: 2rem;
 }
-ul{
+.logoIcon{
+    /*background-color: #759AFF;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.leftList{
     display: flex;
     justify-content: start;
     align-items: center;
-   /* background-color: brown;*/
     margin: 0px 0px;
-    padding: 0px 32px;
+    padding: 0px 40px;
 }
-ul{
+.leftList , .rightList{
     width: 100%;
+   /* background-color: brown;*/
+
 }
-ul li,.getStartedBox a{
-    margin: 0px 10px;
+.leftList li,.rightList li{
+    margin: 0px 1rem;
     list-style: none;
 }
-ul li button , .getStartedBox a ,button{
+.rightList li, .rightList li a , button{
     color: white;
     text-decoration: none;
-    font-size: 0.6rem;
+    font-size: 1rem;
     text-decoration: none;
     background-color: transparent;
     border: none;
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
+    /*background-color: bisque;*/
 }
 
 .getStartedBox{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     margin: 0px 0px 0px 16px;
     width: 100%;
+    /*background-color: #759AFF;*/
 }
-.getStartedBox a:nth-child(2){
+.getStartedBox .rightList{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+   /* background-color: aquamarine;*/
+}
+.getStartedBox .rightList li:nth-child(2){
+    margin-right: 0px;
+}
+.getStartedBox .rightList li:nth-child(2) a{
     background-color: var(--primaryColor);
     color: var(--backGroundColor);
     font-family: 'Ubuntu', sans-serif;
-    font-size: 0.6rem;
-    padding: 4px 12px;
+    font-size: 1rem;
+    margin-right: 0px;
+    padding: 8px 16px;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+    font-weight: 500;
+    box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.1);
+}
+.getStartedBox .rightList li:nth-child(1) a{
+    /*background-color: var(--primaryColor);*/
+}
+
+i{
+    color:var(--whiteColor);
+    display: none;
+    font-size: 2rem;
+}
+
+@media (max-width:1200px){
+    .navBarTop .rightList,.navBarTop .leftList{
+        display: none;
+    }
+    i{
+        display: flex;
+        
+    }
+
 }
