--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -4,11 +4,14 @@
     padding: 0;
     scroll-behavior: smooth;
 }
+html, body{
+    min-height: 100%;
+}
 
 :root{
     --primaryColor : #759AFF;
     --backGroundColor : #08122A;
-    --backGroundColor2 : #08122A;
+    --backGroundColor2 : #0D1935;
 }
 .parentContainer{
     width: 100%;
@@ -18,7 +21,6 @@
 .firstPage{
     width: 100%;
     height: 100%;
-    background-color: var(--primaryColor);
     background-image:url(../../../photos/AllPosters.jpg);
     background-position: center center;
     background-repeat: no-repeat;
@@ -43,7 +45,7 @@
     height: 100%;
 }
 .content .heroSection{
-   /* background-color: bisque;*/
+   /*background-color: bisque;*/
     width: 100%;
     height: 100%;
     display: flex;
@@ -52,7 +54,7 @@
     flex-direction: row;
 }
 .content .heroSection .leftSide{
-    margin-left: 32px;
+    margin-left: 48px;
     /*background-color: #759AFF;*/
     width: 50%;
     color: white;
@@ -61,10 +63,11 @@
 .title{
     margin-bottom: 12px;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 2rem;
+    font-size: 4rem;
+    color: white;
 }
 .leftSide p{
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: 300;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.5px;
@@ -74,5 +77,23 @@
    /* background-color: #759AFF;*/
     width: 50%;
     height: 80%;
+
+}
+
+
+@media (max-width:640px){
+    .content .heroSection .leftSide{
+        width: 100%;
+        margin: 0px 32px;
+    }
+    .leftSide p{
+        font-size: 0.5rem;
+    }
+    .title{
+        font-size: 1rem;
+    }
+    .content .heroSection .rightSide{
+        display: none;
+    }
 
 }
