--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -15,18 +15,28 @@
 
 .navBarTop,.navBarScroll{
     position: fixed;
-    z-index: 1;
+    z-index: 999999;
     width: 100%;
     display: flex;
     flex-direction: row;
-    padding: 1.7rem 48px;
-    background-color: transparent;
+    /*height: 10vh;*/
+    padding: 24px 56px;
+    backdrop-filter: blur(20px);
+    --webkit-backdrop-filter : blur(20px);
+    background-color: rgb(13, 25, 53,0.5);
+    box-shadow: 0px 0px 50px rgb(13, 25, 53);
+    transition: 100ms ease-in-out all;
+    -webkit-transition: 100ms ease-in-out all;
+    -moz-transition: 100ms ease-in-out all;
+    -ms-transition: 100ms ease-in-out all;
+    -o-transition: 100ms ease-in-out all;
 }
 .navBarScroll{
     backdrop-filter: blur(20px);
     --webkit-backdrop-filter : blur(20px);
     background-color: rgb(13, 25, 53,0.5);
     box-shadow: 0px 0px 50px rgb(13, 25, 53);
+    padding: 24px 56px;
 }
 img{
    /* background-color: aqua;*/
@@ -36,23 +46,30 @@ img{
 .logoIcon{
     /*background-color: #759AFF;*/
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex: 1;
 }
 .leftList{
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     margin: 0px 0px;
     padding: 0px 40px;
+    /*background-color: aquamarine;*/
+    flex: 4;
+}
+.rightList{
+    /*background-color: aquamarine;*/
+    flex: 1;
 }
 .leftList , .rightList{
-    width: 100%;
-   /* background-color: brown;*/
+   /* width: 100%;
+    background-color: brown;*/
 
 }
 .leftList li,.rightList li{
-    margin: 0px 1rem;
+    margin: 0px 1.5rem;
     list-style: none;
 }
 .rightList li, .rightList li a , button{
@@ -64,15 +81,35 @@ img{
     border: none;
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 0;
     /*background-color: bisque;*/
 }
+/*.leftList li button{
+    padding-bottom: 4px;
+    border-bottom: 2px solid var(--primaryColor);
+}*/
+.leftList .linkChoosen{
+    border-bottom: 2px solid var(--primaryColor);
+    transition: 50ms ease-in-out all;
+    -webkit-transition: 50ms ease-in-out all;
+    -moz-transition: 50ms ease-in-out all;
+    -ms-transition: 50ms ease-in-out all;
+    -o-transition: 50ms ease-in-out all;
+}
 
+.leftList .linkDefault{
+    border: none;
+    padding: 0;
+}
 .getStartedBox{
     display: flex;
     justify-content: flex-end;
     align-items: center;
     margin: 0px 0px 0px 16px;
-    width: 100%;
+    /*width: 100%;
     /*background-color: #759AFF;*/
 }
 .getStartedBox .rightList{
@@ -110,13 +147,40 @@ i{
     font-size: 2rem;
 }
 
-@media (max-width:1200px){
-    .navBarTop .rightList,.navBarTop .leftList{
+@media (width <= 420px){
+    
+    html{
+        font-size: 8px;
+    }
+
+    .navBarTop .rightList,.navBarTop .leftList,.navBarScroll .rightList,.navBarScroll .leftList {
         display: none;
     }
+
     i{
         display: flex;
         
     }
 
 }
+
+@media (720px >= width > 420px){
+    html{
+        font-size: 12px;
+    }
+    .navBarTop .rightList,.navBarTop .leftList,.navBarScroll .rightList,.navBarScroll .leftList {
+        display: none;
+    }
+
+    i{
+        display: flex;
+        
+    }
+}
+
+/*@media (width < 1080px){
+    html{
+        font-size: 16px;
+    }
+
+}*/
