--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -16,84 +16,212 @@ html, body{
 .parentContainer{
     width: 100%;
     height: 100vh;
-    margin-bottom: 30px;
 }
 .firstPage{
     width: 100%;
-    height: 100%;
+    height: 900px;
+    position: relative;
     background-image:url(../../../photos/AllPosters.jpg);
-    background-position: center center;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
 }
 .secondPage{
     width: 100%;
-    height: 100%;
-    background-color: var(--backGroundColor);
+   /* background-color: var(--backGroundColor);*/
+    background-image: url(../../../photos/circlesPattern.svg);
+    background-repeat: repeat-x;
+    background-position: center center;
+    padding: 6rem 56px;
 }
-
+.secondPage .heroSection2{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,1fr);
+    grid-template-rows: auto;
+    gap: 2rem;
+}
+.secondPage .leftSide2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*background-color: white;*/
+    overflow: hidden;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+}
+.secondPage .leftSide2 img{
+    width: 40rem;
+    height: 40rem;
+}
+.secondPage .rightSide2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+   /* background-color: #759AFF;*/
+    grid-row-start: 1;
+}
 .thirdPage{
     width: 100%;
-    height: 100%;
     background-color: var(--primaryColor);
 }
 .content{
-    background-color: var(--backGroundColor);
+    background-color:var(--backGroundColor);
     opacity: 0.9;
     position: absolute;
-    width: 100%;
-    height: 100%;
-}
-.content .heroSection{
-   /*background-color: bisque;*/
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
 }
-.content .heroSection .leftSide{
-    margin-left: 48px;
-    /*background-color: #759AFF;*/
-    width: 50%;
+.heroSection1{
+   /*background-color: aquamarine;*/
+    width: 100%;
+    height: 100%;
+    padding: 0 56px;
+    position: absolute;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-rows: auto;
+    gap: 2rem;
+    align-content: center;
+    justify-content: space-evenly;
+}
+.heroSection1 .leftSide1{
+    /*background-color: black;*/
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    column-gap: 10px;
     
 }
-.title{
-    margin-bottom: 12px;
+.title1{
+    margin: 1rem 0;
     font-family: 'Ubuntu', sans-serif;
     font-size: 4rem;
     color: white;
 }
-.leftSide p{
+.title2 , .title2 span{
+    margin: 1rem 0;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 3rem;
+    color: white;
+}
+
+.rightSide2 p{
+    margin:0.3rem 0;
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.5px;
+    line-height: 2.5rem;
+    color: white;
+}
+.leftSide1 p{
+    margin:1rem 0;
     font-size: 2rem;
     font-weight: 300;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.5px;
+    line-height: 2.5rem;
 }
-.content .heroSection .rightSide{
-    margin-right: 32px;
-   /* background-color: #759AFF;*/
-    width: 50%;
-    height: 80%;
+.leftSide1 .exploreCTA{
+    margin:1rem 0;
+    background-color: var(--primaryColor);
+    color: white;
+    padding: 12px 20px;
+    border-radius: 40px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+.leftSide1 .exploreCTA a{
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+    box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.1);
+    text-decoration: none;
+    word-spacing: 3px;
+}
+.heroSection1 .rightSide1{
+    /*background-color: #759AFF;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
+.heroSection1 .rightSide1 .circle{
+    width: 25rem;
+    height: 25rem;
+    background-color: white;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
 
-@media (max-width:640px){
-    .content .heroSection .leftSide{
-        width: 100%;
-        margin: 0px 32px;
+.heroSection1 .rightSide1 .circle img{
+    width: 500px;
+    height: 400px;
+}
+
+@media (width <= 420px){
+    
+    html{
+        font-size: 8px;
     }
-    .leftSide p{
-        font-size: 0.5rem;
+    .heroSection1 .leftSide1{
+        grid-row-start: 2;
+        align-items: center;
+        text-align: center;
+
     }
-    .title{
-        font-size: 1rem;
+
+}
+
+@media (width <= 720px){
+    html{
+        font-size: 12px;
     }
-    .content .heroSection .rightSide{
-        display: none;
+    .heroSection1 .leftSide1{
+        grid-row-start: 2;
+        align-items: center;
+        text-align: center;
+    }
+    .heroSection1 .rightSide1 .circle{
+        width: 20rem;
+        height: 20rem;
+    }
+    .heroSection1 .rightSide1 .circle img{
+        width: 400px;
+        height: 300px;
+    }
+    
+
+}
+
+@media (width > 720px){
+    html{
+        font-size: 16px;
     }
 
 }
