--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -235,7 +235,7 @@ html, body{
     font-size: 3rem;
     color: white;
     text-align: center;
-    display: inline-block;
+    display: inline;
 }
 
 .rightSide2 p{
