--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -21,10 +21,10 @@
     flex-direction: row;
     /*height: 10vh;*/
     padding: 24px 56px;
-    backdrop-filter: blur(20px);
+   /* backdrop-filter: blur(20px);
     --webkit-backdrop-filter : blur(20px);
     background-color: rgb(13, 25, 53,0.5);
-    box-shadow: 0px 0px 50px rgb(13, 25, 53);
+    box-shadow: 0px 0px 50px rgb(13, 25, 53);*/
     transition: 100ms ease-in-out all;
     -webkit-transition: 100ms ease-in-out all;
     -moz-transition: 100ms ease-in-out all;
