--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -6,6 +6,7 @@
 }
 html, body{
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 :root{
@@ -45,13 +46,14 @@ html, body{
     opacity: 0.5;*/
 }
 .heroSection1{
-   /* background-color: aquamarine;*/
+   /*background-color: aquamarine;*/
     width: 100%;
     height: 100%;
     padding: 0 0 0 56px;
     position: absolute;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-rows: 70%;
     gap: 4rem;
     align-content: flex-end;
     justify-content: space-evenly;
@@ -64,13 +66,27 @@ html, body{
     align-items: flex-start;
     flex-direction: column;
     column-gap: 10px;
-    height: 500px;
+    /*height: auto;*/
 }
 .title1{
     margin: 0.5rem 0;
     font-family: 'Ubuntu', sans-serif;
     font-size: 3.5rem;
     color: white;
+}
+.inputTitle{
+    margin: 0.5rem 0;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 3.5rem;
+    font-weight: 500;
+    color: white;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    caret-color: var(--primaryColor);
+    caret-shape: underscore;
+    width: 100%;
+
 }
 .leftSide1 p{
     margin:0.5rem 0;
@@ -84,10 +100,10 @@ html, body{
 .leftSide1 .subscribeBox{
     margin:2rem 0;
     background-color: white;
-    width: 80%;
+    width: fit-content;
     color: white;
     height: fit-content;
-    padding: 8px 8px 8px 24px;
+    padding: 8px 8px 8px 8px;
     border-radius: 100px;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
@@ -98,6 +114,11 @@ html, body{
     justify-content: flex-start;
     align-items: center;
     gap:16px;
+    transition: all 1s ease;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
 }
 .leftSide1 .subscribeBox input[type = text]{
     border: none;
@@ -106,6 +127,12 @@ html, body{
     font-size: 1rem;
     font-family: 'Roboto',sans-serif;
     font-weight: 400;
+    display: none;
+    transition: all 1s ease;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
 }
 .leftSide1 .subscribeBox input[type = text]::placeholder{
     font-size: 1rem;
@@ -134,6 +161,7 @@ html, body{
     -ms-transition: 200ms ease-in-out all;
     -o-transition: 200ms ease-in-out all;
     background: linear-gradient(to right,#4d7cfd,#759AFF);
+    box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.5);
 
 }
 .leftSide1 .subscribeBox a:hover{
@@ -158,10 +186,11 @@ html, body{
     -o-border-radius: 100%;
 }*/
 .heroSection1 .rightSide1{
-   /* background-color: aquamarine;*/
+    /*background-color: black;*/
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+    /*height: 200px;*/
 }
 
 .heroSection1 .rightSide1 .circle{
@@ -191,9 +220,10 @@ html, body{
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: flex-end;
     position: relative;
+   /* background-color: aquamarine;*/
 }
 .actorSlider .backCircles{
     width:100%;
@@ -243,14 +273,21 @@ html, body{
     width: 100%;
    /* background-color: var(--backGroundColor);*/
     background-image: url(../../../photos/circlesPattern.svg);
-    padding: 6rem 56px;
     position: relative;
     overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12rem;
+    
 }
 .secondPage .circlesImage{
     width: auto;
     height: auto;
-    /*background-color: white;*/
     position: absolute;
     top: 300px;
     right: -50px;
@@ -261,9 +298,36 @@ html, body{
     grid-template-columns: repeat(auto-fit,1fr);
     grid-template-rows: auto;
     gap: 4rem;
+    width: 100%;
 }
-.title2 , .title2 h1{
-    margin: 0.5rem 0;
+.secondPage .imageGif{
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: fit-content;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+.secondPage .rightSide2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+   /* background-color: #759AFF;*/
+    grid-row-start: 1;
+    overflow: hidden;
+    gap: 1rem;
+}
+
+.title2{
+}
+.title2 > h1{
+    margin: 0 0.5rem;
     font-family: 'Ubuntu', sans-serif;
     font-size: 3rem;
     color: white;
@@ -272,7 +336,6 @@ html, body{
 }
 
 .rightSide2 p{
-    margin:0.5rem 0;
     font-size: 1.5rem;
     font-weight: 300;
     font-family: 'Roboto', sans-serif;
@@ -280,6 +343,7 @@ html, body{
     line-height: 2.5rem;
     color: white;
     text-align: center;
+    width: 80%;
 }
 .secondPage .leftSide2{
     position: relative;
@@ -298,15 +362,6 @@ html, body{
     width: 70rem;
     height: 45rem;
 }
-.secondPage .rightSide2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-   /* background-color: #759AFF;*/
-    grid-row-start: 1;
-}
-
 
 
 /*------------------------------------------------------------------------------
@@ -324,12 +379,45 @@ html, body{
         font-size: 8px;
     }
     .firstPage{
-        height: 100vh;
+       /* height: 100vh;*/
+    }
+    .heroSection1{
+        padding: 0;
+        gap: 2rem;
+        grid-template-rows: 60%;
+    }
+    .inputTitle{
+        text-align: center;
+    }
+    .heroSection1 .rightSide1{
+        height: 200px;
     }
     .heroSection1 .leftSide1{
         align-items: center;
         text-align: center;
+        height: auto;
     }
+    .heroSection1 .rightSide1 .actorImage{
+        width: 25rem;
+        height: 25rem;
+        height: fit-content;
+    }
+    .heroSection1 .rightSide1 .actorImage img{
+        width: 300px;
+        height: 200px;
+    }
+    .actorSlider .backCircles div:first-child{
+        clip-path: circle(45.1% at 50% 100%);
+    }
+    .actorSlider .backCircles div:last-child{
+        clip-path: circle(45.1% at 48% 100%);
+    }
+
+    .secondPage .leftSide2 img{
+        width: 35rem;
+        height:22rem;
+    }
+
     .heroSection2 .rightSide2{
         text-align: center;
     }
@@ -340,6 +428,12 @@ html, body{
         font-size: 1.2rem;
         line-height: 2rem;
     }
+    .secondPage .leftSide2 img{
+        width: 40rem;
+        height:22rem;
+    }
+    .secondPage .heroSection2{
+    }
 
 }
 
@@ -347,11 +441,16 @@ html, body{
     html{
         font-size: 12px;
     }
-    /*.firstPage{
-        height: 100vh;
-    }*/
+    .firstPage{
+       /* height: 100vh;*/
+    }
     .heroSection1{
-        padding: 0 56px;
+        padding: 0;
+        gap: 2rem;
+        grid-template-rows: 60%;
+    }
+    .inputTitle{
+        text-align: center;
     }
     .heroSection1 .leftSide1{
         align-items: center;
@@ -359,16 +458,24 @@ html, body{
         height: auto;
     }
     .heroSection1 .rightSide1{
-        height: auto;
+        height: 200px;
     }
     .heroSection1 .rightSide1 .actorImage{
         width: 20rem;
         height: 20rem;
+        height: fit-content;
     }
     .heroSection1 .rightSide1 .actorImage img{
-        width: 400px;
-        height: 300px;
+        width: 300px;
+        height: 200px;
     }
+    .actorSlider .backCircles div:first-child{
+        clip-path: circle(45.1% at 50% 100%);
+    }
+    .actorSlider .backCircles div:last-child{
+        clip-path: circle(45.1% at 48% 100%);
+    }
+
     .secondPage .leftSide2 img{
         width: 35rem;
         height:22rem;
@@ -387,12 +494,36 @@ html, body{
     html{
         font-size: 16px;
     }
+    .firstPage{
+       height: 520px;
+    }
+    .firstPage .heroSection1 .rightSide1 {
+    }
+    .heroSection1 .rightSide1 .actorImage{
+        width: 20rem;
+        height: 20rem;
+        height: fit-content;
+    }
+    .heroSection1 .rightSide1 .actorImage img{
+        width: 400px;
+        height: 300px;
+    }
+    .actorSlider .backCircles div:first-child{
+        clip-path: circle(45.1% at 50% 100%);
+    }
+    .actorSlider .backCircles div:last-child{
+        clip-path: circle(45.1% at 48% 100%);
+    }
+
+    .secondPage .leftSide2 img{
+        width: 40rem;
+        height:27rem;
+    }
     .secondPage .leftSide2 img{
         width: 45rem;
         height:27rem;
     }
     .secondPage .heroSection2{
-        background-color: #759AFF;
     }
 
 }
