--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -161,7 +161,7 @@ html, body{
     -ms-transition: 200ms ease-in-out all;
     -o-transition: 200ms ease-in-out all;
     background: linear-gradient(to right,#4d7cfd,#759AFF);
-    box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.5);
+    /*box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.5);*/
 
 }
 .leftSide1 .subscribeBox a:hover{
@@ -271,8 +271,8 @@ html, body{
 --------------------------------------------------------------------------------*/
 .secondPage{
     width: 100%;
-   /* background-color: var(--backGroundColor);*/
-    background-image: url(../../../photos/circlesPattern.svg);
+    background-color: var(--backGroundColor);
+    /*background-image: url(../../../photos/circlesPattern.svg);*/
     position: relative;
     overflow: hidden;
     background-repeat: no-repeat;
@@ -283,6 +283,7 @@ html, body{
     justify-content: center;
     align-items: center;
     gap: 12rem;
+    padding: 6rem 0;
     
 }
 .secondPage .circlesImage{
@@ -312,7 +313,20 @@ html, body{
     overflow: hidden;
     position: relative;
     width: 100%;
+    background-color: #759AFF;
 }
+.content2{
+    background: linear-gradient(to right,var(--backGroundColor2),#507aee);
+    box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.5);
+    opacity: 0.7;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
 .secondPage .rightSide2{
     display: flex;
     justify-content: center;
@@ -362,7 +376,59 @@ html, body{
     width: 70rem;
     height: 45rem;
 }
-
+/*.videoPlayer{
+    width: 100vw;
+    height: 100vh;
+    background-color: antiquewhite;
+    object-fit: cover;
+}*/
+.videoPlayer{
+    width:100%;
+    height:500px;
+    object-fit: cover;
+    transform:scale(1);
+    -webkit-transform:scale(1);
+    -moz-transform:scale(1);
+    -ms-transform:scale(1);
+    -o-transform:scale(1);
+}
+.Player,.reactPlayer{
+    object-fit: fill;
+    width: 100vw;
+    height: 100vh;
+    background-color: aliceblue;
+}
+.imageGif video{
+    -moz-transform:scale(1.5);
+    -webkit-transform:scale(1.5);
+    -o-transform:scale(1.5);
+    -ms-transform:scale(1.5);
+    transform:scale(1.5);
+}
+/*.imagePoster{
+    background-image: url(../../../photos/jw2.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}*/
+.imageContainer{
+    background-image: url(../../../photos/hh.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100vw;
+    height: 1000px;
+}
+.content3{
+    background: radial-gradient(transparent,var(--backGroundColor) 80%);
+    opacity: 0.8;
+    position: absolute;
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
 
 /*------------------------------------------------------------------------------
 ------------------------------- 3rd Page -----------------------------------
@@ -381,6 +447,16 @@ html, body{
     .firstPage{
        /* height: 100vh;*/
     }
+    .videoPlayer{
+    transform: scale(2);
+    -webkit-transform: scale(2);
+    -moz-transform: scale(2);
+    -ms-transform: scale(2);
+    -o-transform: scale(2);
+}
+.imagePoster{
+    display: none;
+}
     .heroSection1{
         padding: 0;
         gap: 2rem;
@@ -413,11 +489,6 @@ html, body{
         clip-path: circle(45.1% at 48% 100%);
     }
 
-    .secondPage .leftSide2 img{
-        width: 35rem;
-        height:22rem;
-    }
-
     .heroSection2 .rightSide2{
         text-align: center;
     }
@@ -430,9 +501,7 @@ html, body{
     }
     .secondPage .leftSide2 img{
         width: 40rem;
-        height:22rem;
-    }
-    .secondPage .heroSection2{
+        height:25rem;
     }
 
 }
@@ -443,6 +512,9 @@ html, body{
     }
     .firstPage{
        /* height: 100vh;*/
+    }
+    .imagePoster{
+        display: none;
     }
     .heroSection1{
         padding: 0;
