--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -301,32 +301,6 @@ html, body{
     gap: 4rem;
     width: 100%;
 }
-.secondPage .imageGif{
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: fit-content;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    background-color: #759AFF;
-}
-.content2{
-    background: linear-gradient(to right,var(--backGroundColor2),#507aee);
-    box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.5);
-    opacity: 0.7;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} 
-
 .secondPage .rightSide2{
     display: flex;
     justify-content: center;
@@ -336,9 +310,6 @@ html, body{
     grid-row-start: 1;
     overflow: hidden;
     gap: 1rem;
-}
-
-.title2{
 }
 .title2 > h1{
     margin: 0 0.5rem;
@@ -382,16 +353,7 @@ html, body{
     background-color: antiquewhite;
     object-fit: cover;
 }*/
-.videoPlayer{
-    width:100%;
-    height:500px;
-    object-fit: cover;
-    transform:scale(1);
-    -webkit-transform:scale(1);
-    -moz-transform:scale(1);
-    -ms-transform:scale(1);
-    -o-transform:scale(1);
-}
+
 .Player,.reactPlayer{
     object-fit: fill;
     width: 100vw;
@@ -420,14 +382,14 @@ html, body{
     height: 1000px;
 }
 .content3{
-    background: radial-gradient(transparent,var(--backGroundColor) 80%);
+   /* background: radial-gradient(transparent,var(--backGroundColor) 80%);
     opacity: 0.8;
     position: absolute;
     width: 100%;
     height: 1000px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
 } 
 
 /*------------------------------------------------------------------------------
@@ -435,7 +397,100 @@ html, body{
 --------------------------------------------------------------------------------*/
 .thirdPage{
     width: 100%;
-    background-color: var(--primaryColor);
+   /* background-color: var(--primaryColor);*/
+    /*background-color: #4d7cfd;*/
+    padding: 6rem 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.thirdPage .rightSide2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #759AFF;
+    grid-row-start: 1;
+    overflow: hidden;
+    gap: 3rem;
+    width: 100%;
+}
+
+.thirdPage .content2{
+    background: linear-gradient(to right,var(--backGroundColor2),#507aee);
+    box-shadow: 0 0 1px 8px rgb(117, 154, 255, 0.5);
+    opacity: 0.7;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+.thirdPage .imageGif{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: fit-content;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    /*background-color: #759AFF;*/
+}
+.thirdPage .textSection{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+.textSection > h1{
+        margin: 0 0.5rem;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 3rem;
+        color: white;
+        text-align: center;
+        display: inline;
+}
+.imageGif .exploreCTA{
+    z-index: 25;
+}
+.imageGif .rightSide2 a{
+    z-index: 25;
+    color: white;
+    padding: 12px 40px;
+    border-radius: 40px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-decoration: none;
+    word-spacing: 3px;
+    transition: 200ms ease-in-out all;
+    -webkit-transition: 200ms ease-in-out all;
+    -moz-transition: 200ms ease-in-out all;
+    -ms-transition: 200ms ease-in-out all;
+    -o-transition: 200ms ease-in-out all;
+    background: linear-gradient(to right,#4d7cfd,#759AFF);
+    /*box-shadow: 0 0 6px 4px rgb(117, 154, 255, 0.5);*/
+}
+.imageGif .rightSide2 a:hover{
+        box-shadow: 0 0 2px 6px rgb(117, 154, 255, 0.2);
+}
+.videoPlayer{
+    width:100%;
+    height:500px;
+    object-fit: cover;
+    transform:scale(1);
+    -webkit-transform:scale(1);
+    -moz-transform:scale(1);
+    -ms-transform:scale(1);
+    -o-transform:scale(1);
 }
 
 
